--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java_Script_70_Ejercicios</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Recursos__img/Unofficial_JavaScript_logo_2.svg" type="image/x-icon">
 </head>
 <body>
-    
+    <script type="module" src=""></script>
 </body>
 </html>
