--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
         <div class="Content__List">
             <div class="Content__Titlesub"><h1>Listado De Ejercicios Java_Script 70_Ejercicios</h1></div>
             <ul class="Listado_Content">
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios1</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios2</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios3</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios4</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios5</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios6</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios7</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios8</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios9</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios10</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios11</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios12</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios13</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios14</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios15</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios16</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios17</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios18</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">Ejercicios19</a></li>
-                <li class="Content_Links"><a href="Html_Ejercicios/Ejercicios1.html">EjercicioS20</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios1</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios2</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios3</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios4</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios5</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios6</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios7</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios8</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios9</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios10</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios11</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios12</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios13</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios14</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios15</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios16</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios17</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios18</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios19</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">EjercicioS20</a></li>
             </ul>
         </div>
     </div>
