--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div class="Content">
-        <div class="Content__Title"> <h1>Ejercicios Java Script</h1></div>
+        <header>
+            <div class="header__Content">
+                <div class="Content__Logo">
+                    <img class="Content__Logo-Sena" src="Recursos__img/Sena" alt="">
+                </div>
+                <div class="Content__Logo-text"><h1>Sena</h1></div>
+            </div>
+        </header>
         <div class="Content__List">
             <div class="Content__Titlesub"><h1>Listado De Ejercicios Java_Script 70_Ejercicios</h1></div>
             <ul class="Listado_Content">
@@ -36,6 +43,13 @@
             </ul>
         </div>
     </div>
-    <!-- <script type="module" src=""></script> -->
+    <footer>
+        <div class="Content__footer">
+            <div class="Content__Title"> 
+                <h1>Ejercicios Java Script</h1> 
+                <h3>ARPENDIZ:Wilson Delgado FICHA:2094667</h3>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
