--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="Listado_Content">
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios1</a></li>
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios2</a></li>
-                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios3</a></li>
+                <!-- <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios3</a></li>
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios4</a></li>
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios5</a></li>
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios6</a></li>
@@ -39,7 +39,7 @@
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios17</a></li>
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios18</a></li>
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">Ejercicios19</a></li>
-                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">EjercicioS20</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios1.html">EjercicioS20</a></li> -->
             </ul>
         </div>
     </div>
