--- a/Html_Ejercicios/Ejercicios1.html
+++ b/Html_Ejercicios/Ejercicios1.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio 1</title>
+    <link rel="stylesheet" href="../Css/Box_Ejercicios.css">
+    <link rel="shortcut icon" href="../Recursos__img/Unofficial_JavaScript_logo_2.svg" type="image/x-icon">
 </head>
 <body>
-    <h3>Escribir un programa que pregunte al usuario su edad y muestre por pantalla si es mayor o 
-        menor de edad, el programa debe validar que solo se puedan ingresar números positivos</h3>
+    <div class="Box">
+        <div class="Box__Ejercicios-title">
+            <h3>Ejercicio 1</h3>
+        </div>
+        <div class="Box__Ejercicios-subtitle">
+            <h3>Escribir un programa que pregunte al usuario su edad y muestre por pantalla si es mayor o menor de edad, el programa debe validar que solo se puedan ingresar números positivos</h3>
+        </div>
+    </div>
     <script src="../Java_Script_Ejercicios/Ejercicios1.js"></script>
 </body>
 </html>
