------------------insertacion de enlaces faltantes-------------------------

--- a/index.html
+++ b/index.html
@@ -39,7 +39,61 @@
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios17.html">Ejercicios17</a></li>
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios18.html">Ejercicios18</a></li>
                 <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios19.html">Ejercicios19</a></li>
-                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios20.html">EjercicioS20</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios20.html">Ejercicios20</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios21.html">Ejercicios21</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios22.html">Ejercicios22</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios23.html">Ejercicios23</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios24.html">Ejercicios24</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios25.html">Ejercicios25</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios26.html">Ejercicios26</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios27.html">Ejercicios27</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios28.html">Ejercicios28</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios29.html">Ejercicios29</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios30.html">Ejercicios30</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios31.html">Ejercicios31</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios32.html">Ejercicios32</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios33.html">Ejercicios33</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios34.html">Ejercicios34</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios35.html">Ejercicios35</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios36.html">Ejercicios36</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios37.html">Ejercicios37</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios38.html">Ejercicios38</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios39.html">Ejercicios39</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios40.html">Ejercicios40</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios41.html">Ejercicios41</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios42.html">Ejercicios42</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios43.html">Ejercicios43</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios44.html">Ejercicios44</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios45.html">Ejercicios45</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios46.html">Ejercicios46</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios47.html">Ejercicios47</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios48.html">Ejercicios48</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios49.html">Ejercicios49</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios50.html">Ejercicios50</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios51.html">Ejercicios51</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios52.html">Ejercicios52</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios53.html">Ejercicios53</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios54.html">Ejercicios54</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios55.html">Ejercicios55</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios56.html">Ejercicios56</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios57.html">Ejercicios57</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios58.html">Ejercicios58</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios59.html">Ejercicios59</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios60.html">Ejercicios60</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios61.html">Ejercicios61</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios62.html">Ejercicios62</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios63.html">Ejercicios63</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios64.html">Ejercicios64</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios65.html">Ejercicios65</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios66.html">Ejercicios66</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios67.html">Ejercicios67</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios68.html">Ejercicios68</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios69.html">Ejercicios69</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios70.html">Ejercicios70</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios71.html">Ejercicios71</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios72.html">Ejercicios72</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios73.html">Ejercicios73</a></li>
+                <li class="Content_Links"><a class="Listado_List" href="Html_Ejercicios/Ejercicios74.html">Ejercicios74</a></li>
             </ul>
         </div>
     </div>
